--- a/build.xml
+++ b/build.xml
@@ -2599,12 +2599,9 @@
         <istrue value="${skip.installer}"/>
       </or>
     </condition>
-  </target>
-
-  <target name="-installer-set-properties-2"
-      depends="-installer-set-properties-1"
-      if="nsis.executable.unix">
-    <exec executable="${nsis.executable.unix}" outputproperty="nsis.executable.unix.version">
+    <exec executable="${nsis.executable.unix}"
+        osfamily="unix"
+        outputproperty="nsis.executable.unix.version">
       <arg value="-VERSION"/>
     </exec>
     <condition property="nsis.executable.unix.version.ok">
@@ -2629,7 +2626,7 @@ To skip building the Windows installer, set the skip.installer property in build
   </target>
 
   <target name="-installer-check-version"
-      depends="-installer-set-properties-2"
+      depends="-installer-set-properties-1"
       unless="${nsis.executable.unix.version.ok}">
     <fail message="An executable makensis was found at: ${nsis.executable.unix}
 with version [${nsis.executable.unix.version}] but version [v${nsis.version}] is required
