Revert "Fix build on windows"
This reverts commit a6faa71a9ef3aa45f9ee8776e32103afbd0c33dd.

--- a/build.xml
+++ b/build.xml
@@ -2627,9 +2627,12 @@ Apache Tomcat ${version} native binaries for Win64 AMD64/EMT64 platform.
         <istrue value="${skip.installer}"/>
       </or>
     </condition>
-    <exec executable="${nsis.executable.unix}"
-        osfamily="unix"
-        outputproperty="nsis.executable.unix.version">
+  </target>
+
+  <target name="-installer-set-properties-2"
+      depends="-installer-set-properties-1"
+      if="nsis.executable.unix">
+    <exec executable="${nsis.executable.unix}" outputproperty="nsis.executable.unix.version">
       <arg value="-VERSION"/>
     </exec>
     <condition property="nsis.executable.unix.version.ok">
@@ -2654,7 +2657,7 @@ To skip building the Windows installer, set the skip.installer property in build
   </target>
 
   <target name="-installer-check-version"
-      depends="-installer-set-properties-1"
+      depends="-installer-set-properties-2"
       unless="${nsis.executable.unix.version.ok}">
     <fail message="An executable makensis was found at: ${nsis.executable.unix}
 with version [${nsis.executable.unix.version}] but version [v${nsis.version}] is required
