Add wine check in -installer-set-properties-3
Fixes the following case: If the `nsis.tool=wine` and `version.dev` is not set, all conditions are false and the `nsis.executable.unix.version.ok` property is left unset leading to a BUILD FAILED.

--- a/build.xml
+++ b/build.xml
@@ -2661,6 +2661,7 @@
     <condition property="nsis.executable.unix.version.ok">
       <or>
         <os family="windows"/>
+        <isset property="wine.ok"/>
         <equals arg1="v${nsis.version}" arg2="${nsis.executable.unix.version}"/>
         <not>
           <!-- Zero length string for version.dev indicates a release build -->
