--- a/build.xml
+++ b/build.xml
@@ -2638,6 +2638,7 @@ Apache Tomcat ${version} native binaries for Win64 AMD64/EMT64 platform.
       depends="-installer-set-properties-2">
     <condition property="nsis.executable.unix.version.ok">
       <or>
+        <istrue value="${skip.installer}"/>
         <os family="windows"/>
         <isset property="wine.ok"/>
         <equals arg1="v${nsis.version}" arg2="${nsis.executable.unix.version}"/>
