Add skip.installer check in -installer-set-properties-3
Fixes the following case: It doesn't take into cosnideration if the `skip.installer` parameter has been provided leading to a BUILD FAILED

--- a/build.xml
+++ b/build.xml
@@ -2613,6 +2613,7 @@
       depends="-installer-set-properties-2">
     <condition property="nsis.executable.unix.version.ok">
       <or>
+        <istrue value="${skip.installer}"/>
         <os family="windows"/>
         <isset property="wine.ok"/>
         <equals arg1="v${nsis.version}" arg2="${nsis.executable.unix.version}"/>
