Add new registry factory that does not return null
Adding null checks everywhere is not worth it.

--- a/java/org/apache/tomcat/util/modeler/LocalStrings.properties
+++ b/java/org/apache/tomcat/util/modeler/LocalStrings.properties
@@ -37,6 +37,7 @@ managedMBean.noSet=Cannot find setter method [{0}] on resource [{1}]
 modules.digesterParseError=Error parsing registry data
 modules.readDescriptorsError=Error reading descriptors
 
+registry.cannotAccessRegistry=Guard object [{0}] does not allow access to the registry
 registry.createdServer=Created MBeanServer
 registry.existingServer=Using existing MBeanServer
 registry.initError=Error initializing [{0}]
