--- a/java/org/apache/catalina/tribes/group/interceptors/LocalStrings.properties
+++ b/java/org/apache/catalina/tribes/group/interceptors/LocalStrings.properties
@@ -80,7 +80,7 @@ tcpFailureDetector.heartbeat.failed=Unable to perform heartbeat on the TcpFailur
 tcpFailureDetector.member.disappeared=Verification complete. Member disappeared[{0}]
 tcpFailureDetector.memberDisappeared.verify=Received memberDisappeared[{0}] message. Will verify.
 tcpFailureDetector.performBasicCheck.memberAdded=Member added, even though we weren''t notified:[{0}]
-tcpFailureDetector.recievedPacket=Received a failure detector packet [{0}]
+tcpFailureDetector.receivedPacket=Received a failure detector packet [{0}]
 tcpFailureDetector.still.alive=Verification complete. Member still alive[{0}]
 tcpFailureDetector.suspectMember.alive=Suspect member, confirmed alive.[{0}]
 tcpFailureDetector.suspectMember.dead=Suspect member, confirmed dead.[{0}]
