Compatibility with javadoc 24+
New javadoc 24+ uses a "element-list" resource that lists packages,
which is generated by javadoc 10+.
Old javadoc did not generate this resource, as a result an error occurs.
Instead switch to Java 11 for API links. Maybe the issue will be worked
around in javadoc so this could be reverted.

--- a/build.xml
+++ b/build.xml
@@ -2437,7 +2437,7 @@ Apache Tomcat ${version} native binaries for Win64 AMD64/EMT64 platform.
       <link href="../elapi"/>
       <link href="../websocketapi"/>
       <link href="../jaspicapi"/>
-      <link href="https://docs.oracle.com/javase/8/docs/api/"/>
+      <link href="https://docs.oracle.com/en/java/javase/11/docs/api/"/>
       <link href="https://javaee.github.io/javaee-spec/javadocs/"/>
       <packageset dir="${tomcat.dist}/src/java/">
         <include name="org/**"/>
