--- a/build.xml
+++ b/build.xml
@@ -109,7 +109,7 @@
   <property name="compile.release" value="8"/>
   <property name="min.java.version" value="8"/>
   <property name="build.java.version" value="17"/>
-  <property name="release.java.version" value="17"/>
+  <property name="release.java.version" value="22"/>
 
   <!-- Check Java Build Version -->
   <fail message="Java version ${build.java.version} or newer is required (${java.version} is installed)">
@@ -1026,15 +1026,14 @@
     </javac>
     <!-- Compile internal server components that use FFM -->
     <condition property="has-ffm">
-      <isset property="java-ffm.home" />
+      <javaversion atleast="${release.java.version}" />
     </condition>
     <javac srcdir="java" destdir="${tomcat.classes}"
            debug="${compile.debug}"
            deprecation="${compile.deprecation}"
-           release="22"
+           release="${release.java.version}"
            encoding="ISO-8859-1"
            includeAntRuntime="true"
-           fork="true" executable="${java-ffm.home}/bin/javac"
            if:set="has-ffm" >
       <!-- Uncomment this to show unchecked warnings:
       <compilerarg value="-Xlint:unchecked"/>
@@ -2880,9 +2879,6 @@ You may need a custom build of makensis. Instructions for this may be found in B
   <target name="pre-release" depends="-pre-release-lone-target-check, -pre-release-read-asf-username"
       description="Prepares for a release build by writing build.properties.release which contains information about the release-build environment.">
     <antversion property="antversion"/>
-    <exec executable="${java-ffm.home}/bin/javac" outputproperty="javac25.version">
-      <arg value="-version" />
-    </exec>
     <echo file="build.properties.release"># -----------------------------------------------------------------------------
 # Licensed to the Apache Software Foundation (ASF) under one or more
 # contributor license agreements.  See the NOTICE file distributed with
@@ -2927,8 +2923,6 @@ gpg.exec=${gpg.exec}
 # Java Name:       ${java.vm.name}
 # Java Vendor:     ${java.vm.vendor}
 # Java Version:    ${java.vm.version}
-#
-# Javac with FFM version: ${javac25.version}
 
 # The following is provided for information only. Builds will be repeatable
 # whether or not the build environment is consistent with this information.
@@ -3025,16 +3019,17 @@ Configured for ${release.asfusername} to release Tomcat ${version.major}.${versi
     <forceUtcTimeZone />
   </target>
 
-  <target name="release-version-check" >
-    <fail message="Release builds must use Java version ${build.java.version} or newer (${java.version} is installed)">
+  <target name="release-version-check">
+    <!--FIXME: add version check for release once Java 22 has reasonable availability
+    <fail message="Java version ${release.java.version} or newer is required for release (${java.version} is installed)">
       <condition>
         <not><javaversion atleast="${release.java.version}" /></not>
       </condition>
-    </fail>
+    </fail>-->
     <condition property="no-ffm">
-      <not><isset property="java-ffm.home" /></not>
+      <not><javaversion atleast="${release.java.version}" /></not>
     </condition>
-    <echo level="error" if:set="no-ffm">JAVAC VERSION 22 OR NEWER IS REQUIRED FOR RELEASE (java-ffm.home property is set to ${java-ffm.home})</echo>
+    <echo level="error" if:set="no-ffm">JAVA VERSION 22 OR NEWER IS REQUIRED FOR RELEASE</echo>
   </target>
 
   <target name="gpg-init-1">
