Adding nonstandard support for c:set and c:remove

--- a/test/webapp/WEB-INF/web.xml
+++ b/test/webapp/WEB-INF/web.xml
@@ -28,6 +28,11 @@
      required.
   </description>
 
+  <servlet-mapping>
+    <servlet-name>JSP-nonstandard</servlet-name>
+    <url-pattern>/jsp/generator/nonstandard/*</url-pattern>
+  </servlet-mapping>
+
   <servlet>
     <servlet-name>jsp</servlet-name>
       <servlet-class>org.apache.jasper.servlet.JspServlet</servlet-class>
@@ -38,6 +43,29 @@
       <init-param>
         <param-name>xpoweredBy</param-name>
         <param-value>false</param-value>
+      </init-param>
+      <!-- Required by /jsp/tagFileInJar.jsp / TestJspCompilationContext  -->
+      <init-param>
+        <param-name>modificationTestInterval</param-name>
+        <param-value>0</param-value>
+      </init-param>
+    <load-on-startup>3</load-on-startup>
+  </servlet>
+
+  <servlet>
+    <servlet-name>JSP-nonstandard</servlet-name>
+      <servlet-class>org.apache.jasper.servlet.JspServlet</servlet-class>
+      <init-param>
+        <param-name>fork</param-name>
+        <param-value>false</param-value>
+      </init-param>
+      <init-param>
+        <param-name>xpoweredBy</param-name>
+        <param-value>false</param-value>
+      </init-param>
+      <init-param>
+        <param-name>useNonstandardTagOptimizations</param-name>
+        <param-value>c:set,c:remove</param-value>
       </init-param>
       <!-- Required by /jsp/tagFileInJar.jsp / TestJspCompilationContext  -->
       <init-param>
