Report name in exception message for naming lookup failures
BZ#69662
Based on code submitted by Donald Smith.

--- a/java/org/apache/naming/LocalStrings.properties
+++ b/java/org/apache/naming/LocalStrings.properties
@@ -21,8 +21,8 @@ contextBindings.noContextBoundToThread=No naming context bound to this thread
 contextBindings.unknownContext=Unknown context name : [{0}]
 
 namingContext.alreadyBound=Name [{0}] is already bound in this Context
-namingContext.contextExpected=Name is not bound to a Context
-namingContext.failResolvingReference=Unexpected exception resolving reference
+namingContext.contextExpected=Name [{0}] is not bound to a Context
+namingContext.failResolvingReference=Unexpected exception resolving reference with name [{0}]
 namingContext.invalidName=Name is not valid
 namingContext.nameNotBound=Name [{0}] is not bound in this Context. Unable to find [{1}].
 namingContext.noAbsoluteName=Cannot generate an absolute name for this namespace
