--- a/java/org/apache/catalina/startup/MimeTypeMappings.properties
+++ b/java/org/apache/catalina/startup/MimeTypeMappings.properties
@@ -62,6 +62,7 @@ atomsvc=application/atomsvc+xml
 atx=application/vnd.antix.game-component
 au=audio/basic
 avi=video/x-msvideo
+avif=image/avif
 avx=video/x-rad-screenplay
 aw=application/applixware
 axa=audio/annodex
@@ -388,6 +389,7 @@ jsf=text/plain
 json=application/json
 jsonml=application/jsonml+json
 jspf=text/plain
+jxl=image/jxl
 kar=audio/midi
 karbon=application/vnd.kde.karbon
 kfo=application/vnd.kde.kformula
@@ -430,6 +432,8 @@ m14=application/x-msmediaview
 m1v=video/mpeg
 m21=application/mp21
 m2a=audio/mpeg
+m2t=video/mp2t
+m2ts=video/mp2t
 m2v=video/mpeg
 m3a=audio/mpeg
 m3u=audio/x-mpegurl
@@ -839,6 +843,7 @@ tpt=application/vnd.trid.tpt
 tr=text/troff
 tra=application/vnd.trueapp
 trm=application/x-msterminal
+ts=video/mp2t
 tsd=application/timestamped-data
 tsv=text/tab-separated-values
 ttc=font/collection
