Improve test and fix additional issue found

--- a/java/org/apache/catalina/startup/MimeTypeMappings.properties
+++ b/java/org/apache/catalina/startup/MimeTypeMappings.properties
@@ -526,7 +526,7 @@ msh=model/mesh
 msi=application/x-msdownload
 msl=application/vnd.mobius.msl
 msty=application/vnd.muvee.style
-mts=model/vnd.mts
+mts=video/mp2t
 mus=application/vnd.musician
 musicxml=application/vnd.recordare.musicxml+xml
 mvb=application/x-msmediaview
