[TOMCAT-69690] allow to plug in ProgressListener while processing multipart requests

--- a/java/org/apache/catalina/core/LocalStrings.properties
+++ b/java/org/apache/catalina/core/LocalStrings.properties
@@ -40,6 +40,8 @@ applicationContext.setSessionTimeout.ise=The session timeout cannot be set for c
 applicationContext.setSessionTracking.iae.invalid=The session tracking mode [{0}] requested for context [{1}] is not supported by that context
 applicationContext.setSessionTracking.iae.ssl=The session tracking modes requested for context [{0}] included SSL and at least one other mode. SSL may not be configured with other modes.
 applicationContext.setSessionTracking.ise=The session tracking modes for context [{0}] cannot be set whilst the context is running
+applicationContext.no.upload.progressListenerFactory = No factory class for upload progress reporting specified
+applicationContext.invalid.progressListenerFactory = Specified class [{0}] is not a valid ProgressListenerFactory
 
 applicationDispatcher.allocateException=Allocate exception for servlet [{0}]
 applicationDispatcher.customResponse=The response class [{0}] could not be unwraped to the Catalina response class and will be closed immediately after the forward
