Improve error reporting of file copy errors
BZ69694.

--- a/java/org/apache/catalina/manager/LocalStrings.properties
+++ b/java/org/apache/catalina/manager/LocalStrings.properties
@@ -122,7 +122,7 @@ jmxProxyServlet.noOperationOnBean=Cannot find operation [{0}] with [{1}] argumen
 
 managerServlet.alreadyContext=FAIL - Application already exists at path [{0}]
 managerServlet.certsNotAvailable=Certificate information cannot be obtained from this connector at runtime
-managerServlet.copyError=Could not copy configuration file from path [{0}]
+managerServlet.copyFail=FAIL - Unable to copy [{0}] to [{1}], details of the error may be in the server logs
 managerServlet.deleteFail=FAIL - Unable to delete [{0}]. The continued presence of this file may cause problems.
 managerServlet.deployFailed=FAIL - Failed to deploy application at context path [{0}]
 managerServlet.deployed=OK - Deployed application at context path [{0}]
